hapus button di hero

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         2024</h1>
                     <p> Untuk Masa Depan Halmahera Tengah 
                         Yang lebih Cemerlang Bersama <span class="fw-bold">Ikrar</span></p>
-                    <button class="button-lg-primary">Kenali Ikrar</button>
+                    <!-- <button class="button-lg-primary">Kenali Ikrar</button> -->
                     <a href="#">
                         <img src="Assets/Img/eva_arrow-ios-forward-fill.png" alt="">
                     </a>
