hapus button di hero

--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
                     <p> Untuk Masa Depan Halmahera Tengah 
                         Yang lebih Cemerlang Bersama <span class="fw-bold">Ikrar</span></p>
                     <!-- <button class="button-lg-primary">Kenali Ikrar</button> -->
-                    <a href="#">
+                    <!-- <a href="#">
                         <img src="Assets/Img/eva_arrow-ios-forward-fill.png" alt="">
-                    </a>
+                    </a> -->
                 </div>
             </div>
             <img src="Assets/Img/FOTOPASLON1-transformed-removebg-preview.png" alt="" class="position-absolute  end-0 bottom-0 img-hero">
