--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
 
         <div class="container mt-5 position-relative">
           <div class="row">
-            <div class="col-12 d-flex justify-content-start">
+            <div id="cardContainer" class="col-12 d-flex justify-content-start">
               <div class="card-gagasan me-3 position-relative">
                 <img src="Assets/Img/gagasan/Gagasan1.jpeg" alt="">
 
@@ -467,6 +467,7 @@
       </div>
 
     </section>
+
 
     <!-- Kontak -->
 
