--- a/index.html
+++ b/index.html
@@ -383,9 +383,9 @@
             </h2>
           </div>
           <div class="col-lg-3 col-md-12">
-            <button class="button-gagasan"> Lihat Semua...
+            <!-- <button class="button-gagasan"> Lihat Semua...
               <img src="Assets/Img/arrow.png" alt="">
-            </button>
+            </button> -->
           </div>
         </div>
 
@@ -402,7 +402,7 @@
                     </h5>
                     <span>Kepala Dinas PU</span>
                     <h6>Kabupaten Halmahera Tengah</h6>
-                    <button>Lihat Gagasan</button>
+                    <!-- <button>Lihat Gagasan</button> -->
                   </div>
                 </div>
               </div>
@@ -417,7 +417,7 @@
                     </h5>
                     <span>Kepala Dinas PU</span>
                     <h6>Kabupaten Halmahera Tengah</h6>
-                    <button>Lihat Gagasan</button>
+                    <!-- <button>Lihat Gagasan</button> -->
                   </div>
                 </div>
               </div>
@@ -432,7 +432,7 @@
                     </h5>
                     <span>Kepala Dinas PU</span>
                     <h6>Kabupaten Halmahera Tengah</h6>
-                    <button>Lihat Gagasan</button>
+                    <!-- <button>Lihat Gagasan</button> -->
                   </div>
                 </div>
               </div>
@@ -447,7 +447,7 @@
                     </h5>
                     <span>Kepala Dinas PU</span>
                     <h6>Kabupaten Halmahera Tengah</h6>
-                    <button>Lihat Gagasan</button>
+                    <!-- <button>Lihat Gagasan</button> -->
                   </div>
                 </div>
               </div>
