--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <a class="nav-link" href="#kebijakan">Kebijakan</a>
               </li>
               <li class="nav-item mx-2">
-                <a class="nav-link" href="#gagasan">Berita</a>
+                <a class="nav-link" href="#berita">Berita</a>
               </li>
               <li class="nav-item mx-2">
                 <a class="nav-link" href="#sosial-media">Sosial Media</a>
