--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
 
     <!-- Berita -->
 
-    <section id="berita py-5 mt-3">
+    <section id="berita" class="mt-5">
 
       <div class="container">
         <h2 class="text-center mb-5">Berita Terbaru</h2>
