--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
      <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 
     
-    <title>IKRARHALTENG2024</title>
+    <title>IMSAJa</title>
   </head>
   <body>
     
@@ -44,7 +44,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-transparent position-fixed w-100">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
-            <img src="Assets/Img/logo.png" alt="" width="35" class="d-inline-block align-text-top me-3 ">IKRARHALTENG2024</a>
+            <img src="Assets/Img/logo.png" alt="" width="35" class="d-inline-block align-text-top me-3 ">IMSAJa</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -84,10 +84,9 @@
         <div class="container h-100">
             <div class="row h-100">
                 <div class="col-md-6 hero-tagline my-auto">
-                    <h1>Ikrar Untuk Halteng
-                        2024</h1>
+                    <h1>IMSAJa</h1>
                     <p> Untuk Masa Depan Halmahera Tengah 
-                        Yang lebih Cemerlang Bersama <span class="fw-bold">Ikrar</span></p>
+                        Yang lebih Cemerlang Bersama <span class="fw-bold">IMSAJa</span></p>
                     <!-- <button class="button-lg-primary">Kenali Ikrar</button> -->
                     <!-- <a href="#">
                         <img src="Assets/Img/eva_arrow-ios-forward-fill.png" alt="">
