menmbahkan tag google serach console

--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
      <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 
+     <!-- gOOGLE SERACH CONSOLE -->
+
+     <meta name="google-site-verification" content="GQmWnzZcRLzozOB2K7JBjjVx-UNh_adSMh0gBo3a548" />
+
     
     <title>IMSAJa</title>
   </head>
