tambah meta untuk seo

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 
     <!-- Required meta tags -->
     <meta charset="utf-8">
+    <meta name="description" content="IMSAJa Untuk Halmahera Tengah Yang Cemerlang">
+    <meta name="keywords" content="IMSAJa, Halamhera Tengah, Ikram M Sangadji, Arief Jalaludin">
+    <meta name="author" content="IMSAJa">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
@@ -40,6 +43,8 @@
 
     
     <title>IMSAJa</title>
+
+ 
   </head>
   <body>
     
